--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context=".GameScreen">
 
-    <be.ecam.startgame.GameView
+    <be.ecam.PlanetoidDefender.GameView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/the_canvas"/>
